--- a/slick-1.8.1/slick/slick-theme.css
+++ b/slick-1.8.1/slick/slick-theme.css
@@ -70,7 +70,6 @@
     font-size: 20px;
     line-height: 1;
 
-    opacity: .75;
     color: white;
 
     -webkit-font-smoothing: antialiased;
@@ -79,8 +78,22 @@
 
 .slick-prev
 {
-    left: -25px;
+    left: -7px;
+    z-index: 1;
+    width: 59px;
+    height: 57px;
+    border-radius: 50px;
+    box-shadow: 1px 1px 10px 1px #00000040;
 }
+
+.slick-next {
+z-index: 1;
+    width: 59px;
+    height: 57px;
+    border-radius: 50px;
+    box-shadow: 1px 1px 10px 1px #00000040;
+}
+
 [dir='rtl'] .slick-prev
 {
     right: -25px;
@@ -88,11 +101,11 @@
 }
 .slick-prev:before
 {
-    content: '←';
+    content: url('img/arrow.png');
 }
 [dir='rtl'] .slick-prev:before
 {
-    content: '→';
+    content: url('img/arrow.png');
 }
 
 .slick-next
@@ -106,11 +119,11 @@
 }
 .slick-next:before
 {
-    content: '→';
+    content: url('img/arrow2.png');
 }
 [dir='rtl'] .slick-next:before
 {
-    content: '←';
+    content: url('img/arrow2.png');
 }
 
 /* Dots */
