--- a/style-remake.css
+++ b/style-remake.css
@@ -15,6 +15,7 @@ html, body {
 	left:0;
 	background:#000;
 	opacity:.8;
+	z-index: 2;
 
 }
 
@@ -361,7 +362,7 @@ padding-bottom: 100px;
 .back_button {
 	position: absolute;
 	background:url('img/arrow.png');
-	top: 136px;
+	top: 122px;
     left: -2px;
     width: 59px;
     height: 57px;
