--- a/slick-1.8.1/slick/slick-theme.css
+++ b/slick-1.8.1/slick/slick-theme.css
@@ -222,4 +222,67 @@ z-index: 1;
     .slick-dots ul {
         padding-bottom: 97px;
     }
+    .back_button {
+        display: none;
+    }
+
+    .next_button {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 770px) and (max-width: 974px) {
+
+    .back_button {
+        display: none;
+    }
+
+    .next_button {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .back_button {
+        display: none;
+    }
+
+    .next_button {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 641px) and (max-width: 750px) {
+    .back_button {
+        display: none;
+    }
+
+    .next_button {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 640px) {
+    .back_button {
+        display: none;
+    }
+
+    .next_button {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .back_button {
+        display: none;
+    }
+
+    .next_button {
+        display: none;
+    }
+
+     .slick-arrow {
+        display: none;
+    }
 }
